--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="profile">
           <img id='profile-pic' src="images/profile-pic.JPG" alt="profile-pic">
           <h2 class=about-header>Hi!</h2>
-          <p>I am a fullstack developer (.NET & Angular), a jurist (LL.M) and an adventurer!</p>
+          <p>I am a fullstack developer (.NET & ReactJS), a jurist (LL.M) and an adventurer!</p>
         </div>
         <hr>
         <div class="skills">
